--- a/index.html
+++ b/index.html
@@ -13,24 +13,16 @@
 
 <body class="container-fluid p-0">
     <header>
-        <logo><a href="index.html"><img class="logo" src="./assets/images/logo.jpg" alt="Logo de thecloverbar"></a>
+        <logo><a href="../index.html"><img class="logo" src="../assets/images/logo.jpg" alt="Logo de thecloverbar"></a>
         </logo>
         <h2 class="h2Header">The Clover Bar</h2>
-        <nav class="navbar navbar-expand-lg ">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <ul>
-                        <li><a href="./pages/nosotros.html">Sobre nosotros</a></li>
-                        <li><a href="./pages/menú.html">Menú</a></li>
-                        <li><a href="./pages/galeria.html">Galería</a></li>
-                        <li><a href="./pages/contacto.html">Contacto</a></li>
-                    </ul>
-                </div>
-            </div>
+        <nav>
+            <ul>
+                <li><a href="./pages/nosotros.html">Sobre nosotros</a></li>
+                <li><a href="./pages/menú.html">Menú</a></li>
+                <li><a href="./pages/galeria.html">Galería</a></li>
+                <li><a href="./pages/contacto.html">Contacto</a></li>
+            </ul>
         </nav>
     </header>
     <main>
@@ -43,7 +35,7 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-inner">
+            <div class="carousel-inner col-md-10 h-50 ">
                 <div class="carousel-item active">
                     <img src="./assets/images/picada-bar.jpeg" class="d-block w-100" alt="...">
                 </div>
@@ -68,80 +60,45 @@
         <section>
             <article>
                 <h2>Lo mejor de lo mejor lo encontras acá</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ea quas sapiente nemo, magnam, similique
-                    dicta quis, autem sint aliquid impedit numquam omnis doloribus at totam dolorum. Maxime minus
-                    veritatis tenetur alias eaque voluptas rem, praesentium ex optio, quos laboriosam libero? Ad
-                    pariatur molestias quis inventore ipsa earum cupiditate deserunt consequuntur corrupti dolorem
-                    reiciendis repellat, totam officia tenetur magnam aperiam dignissimos! Magnam nihil dignissimos,
-                    asperiores commodi ipsam porro aperiam illo similique non obcaecati praesentium culpa optio natus ea
-                    exercitationem vel voluptate nemo autem sit facilis sequi. Quasi eveniet nam id, voluptas corporis
-                    consequuntur veritatis nisi laboriosam maiores quaerat corrupti culpa commodi harum dolore dolorem
-                    accusamus officiis obcaecati velit unde ut sapiente minima enim facilis et. Numquam rem quaerat
-                    corrupti vero dolores quas natus animi odit ut. Error perferendis quasi ullam aut officia libero
-                    dolores reprehenderit, sapiente eum culpa, laudantium officiis sunt quae. Suscipit eum cum veniam
-                    voluptates similique quibusdam aliquid magni beatae autem eligendi est nihil quam earum numquam
-                    assumenda, dolorem quos alias soluta. In molestiae est atque repudiandae fugit, corrupti, quae
-                    molestias fugiat commodi error, itaque illum totam dolorem iure modi expedita eligendi magnam rerum
-                    animi nulla! Nulla libero deleniti vero eos tempora minima cupiditate, nam dignissimos harum sit
-                    placeat voluptates obcaecati impedit unde, esse mollitia aliquid incidunt? Nostrum excepturi, est
-                    minus nisi distinctio repudiandae deleniti repellendus blanditiis perferendis? Cum fuga harum
-                    voluptatibus quas voluptatum nesciunt? Voluptate est nulla cum earum nisi dolore ipsum, et magnam
-                    exercitationem in quam obcaecati dicta, atque maiores aliquid laborum repudiandae expedita quae
-                    deserunt molestias blanditiis, voluptatum amet eaque nostrum! Ipsam excepturi blanditiis atque
-                    assumenda nesciunt obcaecati, harum natus quaerat quo delectus, suscipit ad adipisci facilis, ea
-                    modi porro repellat ducimus. Pariatur, commodi optio nesciunt delectus incidunt aperiam facere eum
-                    blanditiis nemo veritatis laborum dolor magnam, autem ad neque unde nulla atque adipisci. Quaerat,
-                    optio esse. Maiores tenetur, dolor asperiores amet necessitatibus odit quam nobis consequuntur ab
-                    impedit rem adipisci, totam, sapiente illum obcaecati pariatur unde harum neque maxime sed eveniet
-                    corporis. Suscipit nam quo consequatur culpa temporibus voluptatem sit iusto repellendus error!
-                    Libero facere nesciunt esse fuga veritatis magnam nobis dignissimos odit, laborum, autem, aliquam
-                    aperiam consectetur quis? Quam nemo id reiciendis sunt eum voluptate voluptates ab nesciunt? Illum
-                    aliquam eius mollitia accusamus assumenda molestias eaque harum sit, in adipisci necessitatibus
-                    reprehenderit quasi laudantium cupiditate optio veritatis, nam nihil totam dolorem, maxime quo ullam
-                    quam fuga velit. Possimus dolorem, quaerat assumenda architecto incidunt fugit optio provident
-                    nostrum, nemo sequi aperiam ratione doloremque? Vitae debitis, ex distinctio porro consequuntur nam
-                    ab quod officiis, aliquid ipsum ad delectus, illum quas unde deleniti similique cum in repellendus
-                    voluptatum voluptate commodi adipisci tenetur quibusdam. Aliquam ut architecto repellendus obcaecati
-                    aut maxime inventore, expedita corporis, labore sequi quisquam tempore, dolores neque non hic
-                    corrupti qui? Porro mollitia illum consectetur rerum laudantium dicta perferendis ea reiciendis quo,
-                    asperiores ducimus. Quam commodi blanditiis distinctio. Cupiditate recusandae facere id dolores
-                    alias reprehenderit officia! Fugit nemo quasi tempora odio vitae error, illum at accusantium
-                    voluptas expedita quibusdam harum? Sequi molestiae porro sint!
+                <p>
+                    The Clover Bar Arroyo Seco es el lugar perfecto para quienes buscan una experiencia única en un
+                    ambiente acogedor. Nos enorgullece ofrecer una amplia selección de bebidas que incluye cervezas
+                    artesanales, cócteles clásicos y una variedad de vinos seleccionados. Nuestra carta destaca por las
+                    deliciosas picadas y pizzas artesanales, ideales para compartir con amigos o familiares. Cada visita
+                    a The Clover Bar se convierte en una ocasión especial, gracias a nuestro servicio atento y
+                    personalizado.
+                </p>
+                <p>
+                    Además de nuestras exquisitas bebidas y comidas, The Clover Bar se caracteriza por su decoración
+                    rústica y elegante, que crea un ambiente cálido y relajado. Organizamos eventos temáticos y noches
+                    especiales con música en vivo, brindando a nuestros clientes una experiencia memorable en cada
+                    visita. Ya sea para una noche tranquila o una celebración, The Clover Bar es el destino preferido en
+                    Arroyo Seco.
                 </p>
             </article>
             <article>
-                <img class="img-fluid object-fit-contain" src="./assets/images/copa-bar.jpeg" alt="">
-                <img class="img-fluid object-fit-contain" src="./assets/images/corona-bar.jpeg" alt="">
+                <img class="img-fluid object-fit-contain" src="./assets/images/copa-bar.jpeg"
+                    alt="Imagen de una copa en The Clover Bar">
+                <img class="img-fluid object-fit-contain" src="./assets/images/corona-bar.jpeg"
+                    alt="Imagen de una botella de cerveza Corona en The Clover Bar">
             </article>
             <article>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod sapiente deleniti cupiditate mollitia
-                    impedit nulla vitae ducimus, recusandae eveniet amet? In saepe suscipit, doloribus, neque ad,
-                    consequatur culpa laborum quibusdam dolore reprehenderit dicta optio. Animi molestiae eligendi
-                    recusandae aspernatur, est aut fuga quasi delectus consequatur nesciunt aliquid laudantium eaque
-                    magnam, modi reiciendis consectetur commodi voluptatibus officia et nisi velit, asperiores minima
-                    nihil. Magnam repudiandae laboriosam pariatur dicta rerum sed nulla cumque laborum iusto, commodi
-                    sequi. Saepe atque officiis beatae iure quod, nisi reprehenderit suscipit officia qui, voluptas
-                    labore laudantium repellendus earum magni est corrupti in temporibus. Dignissimos ullam neque
-                    aliquid laborum, a nesciunt. Porro quis quod officia mollitia quas excepturi nemo consequuntur nihil
-                    necessitatibus dolorem incidunt tenetur, provident laboriosam hic maxime quae dolores dignissimos
-                    tempora laudantium deleniti explicabo, ipsa doloremque sequi. Corrupti id aperiam, error praesentium
-                    dolore laudantium fugiat quibusdam, cumque repellat reiciendis vero voluptatem nam unde odio
-                    reprehenderit accusantium? Quas eius porro at, fugiat, alias expedita, nam quisquam quis atque iure
-                    soluta ipsum consectetur magnam reiciendis odit ullam laboriosam perferendis veniam facere?
-                    Voluptatum nulla ipsum quam tempora illum eos accusamus odio perferendis! Consequuntur sapiente
-                    inventore minima commodi perferendis facere harum natus eaque cum est, mollitia itaque sed eos.
-                    Veritatis, tenetur exercitationem officiis ipsa eligendi, consequuntur consequatur non dolores
-                    aspernatur sint ratione ipsum porro totam vero. Autem alias, mollitia, recusandae odit quam
-                    inventore impedit assumenda quas commodi, rem dolor. Repudiandae dicta sed hic suscipit beatae
-                    temporibus magnam dignissimos, ipsa possimus aspernatur sit eius corrupti libero ab quia, eligendi
-                    officia, officiis nemo! Praesentium asperiores in ipsa placeat necessitatibus, ducimus dolore
-                    corporis ea fugiat! Necessitatibus incidunt nostrum, repellendus vel quibusdam error labore suscipit
-                    aspernatur consectetur aliquam ea inventore expedita, corporis a voluptatum? Porro in commodi
-                    tempora maxime excepturi, dolorem aut quia nemo! Aliquam repellendus quae expedita ex, neque
-                    asperiores tempore eveniet incidunt.
+                <p>
+                    Nuestro compromiso con la calidad se refleja en cada detalle, desde la selección de ingredientes
+                    frescos hasta la presentación de cada plato. Nos esforzamos por ofrecer un ambiente donde todos se
+                    sientan bienvenidos y puedan disfrutar de momentos inolvidables. En The Clover Bar, creemos que la
+                    clave para una gran experiencia radica en combinar excelente comida, bebidas excepcionales y un
+                    servicio inigualable.
+                </p>
+                <p>
+                    Visítanos en Arroyo Seco y descubre por qué The Clover Bar es el lugar de encuentro preferido por la
+                    comunidad. Estamos seguros de que, una vez que pruebes nuestras delicias y disfrutes de nuestro
+                    ambiente, volverás una y otra vez. Te esperamos para brindarte lo mejor de lo mejor, aquí en The
+                    Clover Bar.
                 </p>
             </article>
         </section>
+
     </main>
     <footer>
         <a href="https://www.instagram.com/"><img class="logoRedes" src="./assets/images/instagram.png"
