--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -13,8 +13,8 @@
 
 <body class="container-fluid p-0">
     <header>
-        <logo><a href="../index.html"><img class="logo" src="../assets/images/logo.jpg" alt="Logo de thecloverbar"></a>
-        </logo>
+        <logo><a href="../index.html"><img class="logo" src="../assets/images/logo.jpg"
+                    alt="Logo de The Clover Bar"></a></logo>
         <h2 class="h2Header">The Clover Bar</h2>
         <nav>
             <ul>
@@ -28,65 +28,49 @@
     <main>
         <section class="nosotrosContainer">
             <article id="a1" class="nosotrosArticle">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ea quas sapiente nemo, magnam, similique
-                    dicta quis, autem sint aliquid impedit numquam omnis doloribus at totam dolorum. Maxime minus
-                    veritatis tenetur alias eaque voluptas rem, praesentium ex optio, quos laboriosam libero? Ad
-                    pariatur molestias quis inventore ipsa earum cupiditate deserunt consequuntur corrupti dolorem
-                    reiciendis repellat, totam officia tenetur magnam aperiam dignissimos! Magnam nihil dignissimos,
-                    asperiores commodi ipsam porro aperiam illo similique non obcaecati praesentium culpa optio natus ea
-                    exercitationem vel voluptate nemo autem sit facilis sequi. Quasi eveniet nam id, voluptas corporis
-                    consequuntur veritatis nisi laboriosam maiores quaerat corrupti culpa commodi harum dolore dolorem
-                    accusamus officiis obcaecati velit unde ut sapiente minima enim facilis et. Numquam rem quaerat
-                    corrupti vero dolores quas natus animi odit ut. Error perferendis quasi ullam aut officia libero
-                    dolores reprehenderit, sapiente eum culpa, laudantium officiis sunt quae. Suscipit eum cum veniam
-                    voluptates similique quibusdam aliquid magni beatae autem eligendi est nihil quam earum numquam
-                    assumenda, dolorem quos alias soluta. In molestiae est atque repudiandae fugit, corrupti, quae
-                    molestias fugiat commodi error, itaque illum totam dolorem iure modi expedita eligendi magnam rerum
-                    animi nulla! Nulla libero deleniti vero eos tempora minima cupiditate, nam dignissimos harum sit
-                    placeat voluptates obcaecati impedit unde, esse mollitia aliquid incidunt? Nostrum excepturi, est
-                    minus nisi distinctio repudiandae deleniti repellendus blanditiis perferendis? Cum fuga harum
-                    voluptatibus quas voluptatum nesciunt? Voluptate est nulla cum earum nisi dolore ipsum, et magnam
-                    exercitationem in quam obcaecati dicta, atque maiores aliquid laborum repudiandae expedita quae
-                    deserunt molestias blanditiis, voluptatum amet eaque nostrum! Ipsam excepturi blanditiis atque
-                    assumenda nesciunt obcaecati, harum natus quaerat quo delectus, suscipit ad adipisci facilis, ea
-                    modi porro repellat ducimus. Pariatur, commodi optio nesciunt delectus incidunt aperiam facere eum
-                    blanditiis nemo veritatis laborum dolor magnam, autem ad neque unde nulla atque adipisci. Quaerat,
-                    optio esse. Maiores tenetur, dolor asperiores amet necessitatibus odit quam nobis consequuntur ab
-                    impedit rem adipisci, totam, sapiente illum obcaecati pariatur unde harum neque maxime sed eveniet
-                    corp voluptas expedita quibusdam harum? Sequi molestiae porro sint!
+                <p>
+                    Bienvenidos a The Clover Bar Arroyo Seco, donde la excelencia y la pasión por la hospitalidad se
+                    encuentran en cada rincón. Desde el momento en que entras, eres recibido con un ambiente cálido y
+                    acogedor que te invita a relajarte y disfrutar. Nos destacamos por ofrecer una experiencia
+                    gastronómica única, con una carta que incluye desde deliciosas picadas hasta las mejores pizzas
+                    artesanales de la región.
+                </p>
+                <p>
+                    Nuestro equipo se dedica a brindarte un servicio impecable y atento, asegurándose de que cada visita
+                    sea memorable. Ya sea que vengas a disfrutar de una cena con amigos, una reunión familiar o
+                    simplemente a relajarte después de un día largo, The Clover Bar es el lugar ideal. Con una amplia
+                    selección de cervezas artesanales, vinos seleccionados y cócteles innovadores, siempre encontrarás
+                    algo que se ajuste a tu gusto.
                 </p>
             </article>
             <article id="a2" class="nosotrosArticle">
-                <img width="400px" style="margin: 10px;border: solid white 2px;" src="../assets/images/lugar-frente-bar.jpg" alt="Foto de bar">
-                <img width="400px" style="margin: 10px; margin-top: 0;border: solid white 2px;" src="../assets/images/lugar-bar.jpeg" alt="Foto de bar">
+                <img width="400px" style="margin: 10px;" src="../assets/images/lugar-frente-bar.jpg"
+                    alt="Foto de la entrada de The Clover Bar">
+                <img width="400px" height="450px" object="" style="margin: 10px; margin-top: 0;" src="../assets/images/lugar-bar.jpeg"
+                    alt="Interior de The Clover Bar">
             </article>
             <article id="a3" class="nosotrosArticle">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, eligendi, odio sunt minus rerum, tempore
-                    quis doloribus porro excepturi ea dignissimos. Molestiae voluptates quibusdam totam nostrum tenetur
-                    maxime, illum consequatur natus qui et obcaecati necessitatibus enim sunt. Porro harum error ut quas
-                    suscipit veritatis quis velit illo laborum quo similique voluptas sapiente atque facilis ipsa nihil
-                    expedita temporibus dicta vitae, illum ullam. Maxime molestiae pariatur ab consequuntur eum eius
-                    saepe, ullam, dolorum unde ex illum qui porro nobis cum nemo placeat voluptatem nulla aperiam, sint
-                    fugit expedita sunt. Facilis voluptatem dolorum laudantium in sequi consequatur tempora quod
-                    laboriosam, quae temporibus sint iusto mollitia harum. Hic tempore animi veniam dolorum consectetur
-                    dolores voluptatibus voluptates cum delectus. Ullam porro, tempora eos commodi provident assumenda
-                    laboriosam excepturi quae a! Nisi excepturi nemo dolorem ipsa assumenda, alias, quae, atque pariatur
-                    earum eos dolores non corporis doloremque quam. Sunt, rem asperiores maiores quo, vero a aliquid
-                    perspiciatis expedita voluptatum debitis corrupti earum itaque, quae velit. Nulla, eum repellendus
-                    facilis rem in a blanditiis eos, excepturi libero autem sequi quidem sapiente itaque voluptatem
-                    nesciunt architecto fuga nihil rerum odit ea, sint ex consequatur? Cum assumenda facilis inventore,
-                    quis sit totam eligendi! Tempore quia laudantium numquam sunt!
+                <p>
+                    En The Clover Bar, nos enorgullece ser parte de la comunidad de Arroyo Seco, ofreciendo un espacio
+                    donde todos se sientan bienvenidos. Nuestra misión es crear un lugar donde la buena comida y las
+                    bebidas excepcionales se combinen con un ambiente vibrante y amigable. Organizamos eventos
+                    especiales y noches temáticas con música en vivo, haciendo de cada visita una experiencia única.
+                </p>
+                <p>
+                    Te invitamos a descubrir por qué The Clover Bar se ha convertido en un punto de encuentro favorito.
+                    Con nuestra atención al detalle y compromiso con la calidad, estamos seguros de que disfrutarás cada
+                    momento que pases con nosotros. ¡Esperamos verte pronto!
                 </p>
             </article>
         </section>
     </main>
     <footer>
         <a href="https://www.instagram.com/"><img class="logoRedes" src="../assets/images/instagram.png"
-                alt="Logo de instagram"></a>
+                alt="Logo de Instagram"></a>
         <a href="https://web.facebook.com/?_rdc=1&_rdr"><img class="logoRedes" src="../assets/images/facebook.png"
-                alt="Logo de facebook"></a>
+                alt="Logo de Facebook"></a>
         <a href="https://web.whatsapp.com/"><img class="logoRedes" src="../assets/images/whatsapp.png"
-                alt="Logo de whatsapp"></a>
+                alt="Logo de WhatsApp"></a>
     </footer>
 </body>
 
