--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </button>
         </div>
         <section>
-            <article>
+            <article class="col-xl-4 col-md-6 col-sm-12">
                 <h2>Lo mejor de lo mejor lo encontras acá</h2>
                 <p>
                     The Clover Bar Arroyo Seco es el lugar perfecto para quienes buscan una experiencia única en un
@@ -76,13 +76,13 @@
                     Arroyo Seco.
                 </p>
             </article>
-            <article>
+            <article class="col-xl-4 col-md-6 col-sm-12">
                 <img class="img-fluid object-fit-contain" src="./assets/images/copa-bar.jpeg"
                     alt="Imagen de una copa en The Clover Bar">
                 <img class="img-fluid object-fit-contain" src="./assets/images/corona-bar.jpeg"
                     alt="Imagen de una botella de cerveza Corona en The Clover Bar">
             </article>
-            <article>
+            <article class="col-xl-4 col-md-6 col-sm-12">
                 <p>
                     Nuestro compromiso con la calidad se refleja en cada detalle, desde la selección de ingredientes
                     frescos hasta la presentación de cada plato. Nos esforzamos por ofrecer un ambiente donde todos se
