--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/contacto.css">
     <link rel="icon" href="../assets/icons/trebol.png">
     <title>TheClover</title>
 </head>
@@ -27,8 +28,8 @@
     </header>
     <main>
         <h1 class="h1Contacto">Contacto</h1>
-        <section class="row border">
-            <article class="col-12 col-md-6 col-lg-3">
+        <section class="row">
+            <article class="col-12 col-md-6 col-xl-3">
                 <h2>Comunícate con nosotros</h2>
                 <form method="POST">
                     <label for="nombreYapellido">Nombre y apellido</label>
@@ -45,7 +46,7 @@
                     <input type="submit" name="enviar">
                 </form>
             </article>
-            <article class="col-12 col-md-6 col-lg-3">
+            <article class="col-12 col-md-6 col-xl-3">
                 <h2>Nos encontramos en...</h2>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3340.280776847308!2d-60.515863724321626!3d-33.15425487350828!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b70bc1cf156ec3%3A0xab8ef7dc5ff692b1!2sTHE%20CLOVER%20BAR!5e0!3m2!1ses-419!2sar!4v1717458795014!5m2!1ses-419!2sar"
