--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,26 +7,37 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/nosotros.css">
     <link rel="icon" href="../assets/icons/trebol.png">
     <title>TheClover</title>
 </head>
 
-<body class="container-fluid p-0">
-    <header>
-        <logo><a href="../index.html"><img class="logo" src="../assets/images/logo.jpg"
-                    alt="Logo de The Clover Bar"></a></logo>
-        <h2 class="h2Header">The Clover Bar</h2>
-        <nav>
-            <ul>
-                <li><a href="nosotros.html">Sobre nosotros</a></li>
-                <li><a href="menú.html">Menú</a></li>
-                <li><a href="galeria.html">Galería</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
+<body class="">
+    <header class="w-100">
+        <nav class="navbar navbar-expand-md ">
+            <div class="container-fluid w-100">
+                <a class="navbar-brand" href="#">
+                    <logo><a href="../index.html"><img class="logo" src="../assets/images/logo.jpg"
+                                alt="Logo de The Clover Bar"></a></logo>
+                </a>
+                <h2 class="h2Header">The Clover Bar</h2>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li><a href="nosotros.html">Sobre nosotros</a></li>
+                        <li><a href="menú.html">Menú</a></li>
+                        <li><a href="galeria.html">Galería</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
-        <section class="nosotrosContainer">
+        <section class="nosotrosContainer w-100">
             <article id="a1" class="nosotrosArticle">
                 <p>
                     Bienvenidos a The Clover Bar Arroyo Seco, donde la excelencia y la pasión por la hospitalidad se
@@ -43,11 +54,11 @@
                     algo que se ajuste a tu gusto.
                 </p>
             </article>
-            <article id="a2" class="nosotrosArticle">
-                <img width="400px" style="margin: 10px;" src="../assets/images/lugar-frente-bar.jpg"
+            <article  class="nosotrosArticle">
+                <img id="i1" width="400px" style="margin: 10px;" src="../assets/images/lugar-frente-bar.jpg"
                     alt="Foto de la entrada de The Clover Bar">
-                <img width="400px" height="450px" object="" style="margin: 10px; margin-top: 0;" src="../assets/images/lugar-bar.jpeg"
-                    alt="Interior de The Clover Bar">
+                <img id="i2" width="400px" height="450px" object="" style="margin: 10px; margin-top: 0;"
+                    src="../assets/images/lugar-bar.jpeg" alt="Interior de The Clover Bar">
             </article>
             <article id="a3" class="nosotrosArticle">
                 <p>
