Segunda version responsive

--- a/index.html
+++ b/index.html
@@ -12,17 +12,27 @@
 </head>
 
 <body class="container-fluid p-0">
-    <header>
-        <logo><a href="../index.html"><img class="logo" src="../assets/images/logo.jpg" alt="Logo de thecloverbar"></a>
-        </logo>
-        <h2 class="h2Header">The Clover Bar</h2>
-        <nav>
-            <ul>
-                <li><a href="./pages/nosotros.html">Sobre nosotros</a></li>
-                <li><a href="./pages/menú.html">Menú</a></li>
-                <li><a href="./pages/galeria.html">Galería</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
-            </ul>
+    <header class="w-100">
+        <nav class="navbar navbar-expand-md ">
+            <div class="container-fluid w-100">
+                <a class="navbar-brand" href="#">
+                    <logo><a href="index.html"><img class="logo" src="./assets/images/logo.jpg"
+                                alt="Logo de The Clover Bar"></a></logo>
+                </a>
+                <h2 class="h2Header">The Clover Bar</h2>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li><a href="./pages/nosotros.html">Sobre nosotros</a></li>
+                        <li><a href="./pages/menú.html">Menú</a></li>
+                        <li><a href="./pages/galeria.html">Galería</a></li>
+                        <li><a href="./pages/contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
@@ -57,7 +67,7 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <section>
+        <section class="row">
             <article class="col-xl-4 col-md-6 col-sm-12">
                 <h2>Lo mejor de lo mejor lo encontras acá</h2>
                 <p>
