--- a/pages/menú.html
+++ b/pages/menú.html
@@ -12,23 +12,33 @@
 </head>
 
 <body class="container-fluid p-0">
-    <header>
-        <logo><a href="../index.html"><img class="logo" src="../assets/images/logo.jpg" alt="Logo de thecloverbar"></a>
-        </logo>
-        <h2 class="h2Header">The Clover Bar</h2>
-        <nav>
-            <ul>
-                <li><a href="nosotros.html">Sobre nosotros</a></li>
-                <li><a href="menú.html">Menú</a></li>
-                <li><a href="galeria.html">Galería</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
+    <header class="w-100">
+        <nav class="navbar navbar-expand-md ">
+            <div class="container-fluid w-100">
+                <a class="navbar-brand" href="#">
+                    <logo><a href="../index.html"><img class="logo" src="../assets/images/logo.jpg"
+                                alt="Logo de The Clover Bar"></a></logo>
+                </a>
+                <h2 class="h2Header">The Clover Bar</h2>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li><a href="nosotros.html">Sobre nosotros</a></li>
+                        <li><a href="menú.html">Menú</a></li>
+                        <li><a href="galeria.html">Galería</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
         <h1 class="h1Secundario">Menú</h1>
-        <section>
-            <article>
+        <section class="row">
+            <article class="col col-md-3 col-xl-3">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam rerum repellat a laborum corporis ipsa
                     nisi illum pariatur excepturi, tempore, ducimus dolor totam numquam odio error natus hic! Sint ipsa
                     vel enim distinctio facere suscipit ab sapiente accusantium, tempora quidem reprehenderit animi
@@ -36,18 +46,10 @@
                     perspiciatis iste nostrum? Voluptas illum cum est consequuntur ea ratione reiciendis sint, ex error
                     explicabo amet ipsa velit recusandae odit eaque accusantium deserunt praesentium architecto, dolorum
                     fuga nulla sed! Explicabo optio libero quia, harum architecto quisquam consectetur, non illo amet
-                    commodi in ipsum quod dignissimos tenetur cumque earum. Explicabo maxime laudantium sunt mollitia
-                    eligendi nesciunt eum sapiente quae molestiae quasi beatae reprehenderit ex unde ipsa saepe iste
-                    impedit cupiditate, ut aliquid? Odio, ipsum natus voluptates id illum incidunt debitis, fugit
-                    corrupti reiciendis unde quisquam! Doloremque, laborum nisi! Sequi tenetur eligendi perferendis
-                    ipsum quam fuga nam magni doloribus atque quisquam nesciunt deleniti consequuntur molestiae
-                    doloremque, ab nisi consequatur quidem qui aut harum voluptatem incidunt, distinctio numquam. Ex,
-                    minus amet eos aperiam aut reiciendis dolores accusamus, odio quisquam dignissimos suscipit
-                    consequuntur praesentium perferendis illo ea assumenda accusantium. Quo, eum dicta reiciendis eaque
-                    ex qui odio iure architecto doloribus nisi iste?
+                    commodi in ipsum quod dignissimos tenetur+
                 </p>
             </article>
-            <article>
+            <article class="col col-md-3 col-xl-3">
                 <img width="300px" src="../assets/images/pizza-bar.jpeg" alt="Foto de pizza">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nihil unde voluptate optio voluptates
                     qui beatae fuga, est aliquam dolores eveniet itaque officiis consectetur quibusdam ut maiores velit
@@ -55,7 +57,7 @@
                     ducimus id excepturi vitae, adipisci molestias doloremque ea animi!
                 </p>
             </article>
-            <article>
+            <article class="col col-md-3 col-xl-3">
                 <img width="300px" src="../assets/images/picada-bar.jpeg" alt="Foto de picada">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nihil unde voluptate optio voluptates
                     qui beatae fuga, est aliquam dolores eveniet itaque officiis consectetur quibusdam ut maiores velit
@@ -63,7 +65,7 @@
                     ducimus id excepturi vitae, adipisci molestias doloremque ea animi!
                 </p>
             </article>
-            <article>
+            <article class="col col-md-3 col-xl-3">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta error perspiciatis deleniti, veniam in
                     consequatur magni accusamus! Incidunt, amet sapiente, inventore in facere mollitia quidem beatae
                     unde minima ipsa, alias dolorem! Ab nobis assumenda, deserunt libero molestias alias consequatur
@@ -71,15 +73,7 @@
                     laudantium numquam deleniti molestiae eos doloribus! Dolor dolores, ipsa voluptates asperiores
                     consequuntur mollitia sed praesentium illum earum totam. Cum deserunt in blanditiis harum, facilis
                     nulla ipsum fugit distinctio voluptatibus sit, expedita temporibus. Aut perferendis accusamus quod
-                    impedit, nulla molestiae libero, exercitationem quaerat eligendi, ipsum odit! Laborum quaerat
-                    dolores modi consequatur repellat obcaecati doloribus temporibus vel architecto explicabo quidem a
-                    magni mollitia, neque laboriosam est, inventore corrupti ratione amet? Minima accusantium dolores,
-                    fugit facilis odio corporis soluta vero non corrupti atque perferendis iste, tenetur odit beatae
-                    dicta earum nihil harum. Ipsum illum illo facilis dolorem veniam. Totam corporis tenetur laborum
-                    voluptas veritatis dolorum quidem voluptatibus quos vero deleniti! Dignissimos distinctio dolore
-                    cupiditate sed. Fugit laborum maiores explicabo molestiae. Obcaecati quisquam, sapiente mollitia,
-                    quis, fuga similique adipisci error eum quod accusantium dolorum. Impedit, iusto! Fugit iure ea
-                    sapiente vel quo eligendi qui eaque, distinctio officia, voluptas hic laudantium.
+                    impedit,
                 </p>
             </article>
         </section>
