--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -7,22 +7,33 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/galeria.css">
     <link rel="icon" href="../assets/icons/trebol.png">
     <title>TheClover</title>
 </head>
 
 <body class="container-fluid p-0">
-    <header>
-        <logo><a href="../index.html"><img class="logo" src="../assets/images/logo.jpg" alt="Logo de thecloverbar"></a>
-        </logo>
-        <h2 class="h2Header">The Clover Bar</h2>
-        <nav>
-            <ul>
-                <li><a href="nosotros.html">Sobre nosotros</a></li>
-                <li><a href="menú.html">Menú</a></li>
-                <li><a href="galeria.html">Galería</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
+    <header class="w-100">
+        <nav class="navbar navbar-expand-md ">
+            <div class="container-fluid w-100">
+                <a class="navbar-brand" href="#">
+                    <logo><a href="../index.html"><img class="logo" src="../assets/images/logo.jpg"
+                                alt="Logo de The Clover Bar"></a></logo>
+                </a>
+                <h2 class="h2Header">The Clover Bar</h2>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li><a href="nosotros.html">Sobre nosotros</a></li>
+                        <li><a href="menú.html">Menú</a></li>
+                        <li><a href="galeria.html">Galería</a></li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
