--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -12,7 +12,7 @@
     <title>TheClover</title>
 </head>
 
-<body class="">
+<body>
     <header class="w-100">
         <nav class="navbar navbar-expand-md ">
             <div class="container-fluid w-100">
